--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ uvicorn[standard]==0.30.6
 torch==2.4.1
 torchvision==0.19.1
 pillow==10.4.0
+pydantic==1.10.13
 numpy==1.26.4
+python-multipart==0.0.9
+opencv-python-headless==4.10.0.84
